# mlflow2prov

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: example_duplicate_agents.yaml
examples/config/: example.yaml
examples/integrations/graphviz/: README.md
examples/integrations/jena_fuseki/: README.md  start_jena_fuseki.sh  stop_jena_fuseki.sh
examples/integrations/mongodb/: README.md  start_mongodb.sh  stop_mongodb.sh
examples/integrations/mongodb/queries/: q1.js
examples/integrations/neo4j/: README.md  pyproject.toml  run_query.sh  start_neo4j.sh  stop_neo4j.sh
examples/integrations/neo4j/queries/: q2.cypher
examples/quickstart-example/: README.md  pyproject.toml
examples/quickstart-example/config/: config.yaml
examples/quickstart-example/mlflow/: fix_artifact_paths.py  start_server.sh  stop_server.sh
examples/quickstart-example/mlflow/mlruns/.trash/926685343312215563/: meta.yaml
examples/quickstart-example/mlflow/mlruns/.trash/926685343312215563/cdd341c96f994d1c80853bf589fb6f77/: meta.yaml
examples/quickstart-example/mlflow/mlruns/.trash/926685343312215563/cdd341c96f994d1c80853bf589fb6f77/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
examples/quickstart-example/mlflow/mlruns/.trash/926685343312215563/cdd341c96f994d1c80853bf589fb6f77/metrics/: mae  rmse
examples/quickstart-example/mlflow/mlruns/.trash/926685343312215563/cdd341c96f994d1c80853bf589fb6f77/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.repoURL
examples/quickstart-example/mlflow/mlruns/0/: meta.yaml
examples/quickstart-example/mlflow/mlruns/0/5229ff41dc8949f1a5b92502b087d51a/: meta.yaml
examples/quickstart-example/mlflow/mlruns/0/5229ff41dc8949f1a5b92502b087d51a/tags/: mlflow.runName  mlflow.source.git.commit
examples/quickstart-example/mlflow/mlruns/0/cdd341c96f994d1c80853bf589fb6f7f/: meta.yaml
examples/quickstart-example/mlflow/mlruns/0/cdd341c96f994d1c80853bf589fb6f7f/artifacts/model/: MLmodel
examples/quickstart-example/mlflow/mlruns/0/cdd341c96f994d1c80853bf589fb6f7f/metrics/: r2
examples/quickstart-example/mlflow/mlruns/0/cdd341c96f994d1c80853bf589fb6f7f/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
examples/quickstart-example/mlflow/mlruns/models/model/: meta.yaml
examples/quickstart-example/mlflow/mlruns/models/model/tags/: foo_registered_model
examples/quickstart-example/mlflow/mlruns/models/model/version-1/: meta.yaml
examples/quickstart-example/mlflow/mlruns/models/model/version-2/: meta.yaml
examples/quickstart-example/mlflow/mlruns/models/model/version-2/tags/: foo_registered_model_version
mlflow2prov/: dependencies.py
mlflow2prov/adapters/mlflow/: fetcher.py
mlflow2prov/config/: config.py  schema.json
mlflow2prov/prov/: operations.py
mlflow2prov/service_layer/: services.py  unit_of_work.py
patches/: mlflow-2.3.0-search_utils.patch  mlflow-2.3.0-sqlalchemy_store.patch  mlflow-2.3.2-search_utils.patch  mlflow-2.3.2-sqlalchemy_store.patch  mlflow-2.4.1-search_utils.patch  mlflow-2.4.1-sqlalchemy_store.patch  mlflow-2.4.2-search_utils.patch  mlflow-2.4.2-sqlalchemy_store.patch  mlflow-2.5.0-search_utils.patch  mlflow-2.5.0-sqlalchemy_store.patch
src/mlflow2prov/: dependencies.py  log.py
src/mlflow2prov/adapters/: repository.py
src/mlflow2prov/adapters/git/: fetcher.py
src/mlflow2prov/adapters/mlflow/: fetcher.py
src/mlflow2prov/config/: config.py
src/mlflow2prov/domain/: constants.py  model.py
src/mlflow2prov/entrypoints/: cli.py
src/mlflow2prov/prov/: model.py  operations.py
src/mlflow2prov/utils/: prov_utils.py  time_utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_dependencies.py  test_domain_model.py  test_git_fetcher.py  test_log.py  test_mlflow_fetcher.py  test_operations.py  test_prov_model.py  test_repository.py  test_root.py  test_services.py  test_time_utils.py  test_unit_of_work.py  utils.py
tests/resources/: testconfig.yaml
