[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlflow2prov"
version = "0.1.5"
description = "Extract provenance graphs compliant with W3C PROV from ML experiment projects that use Git repositories and MLflow tracking"
license = "Apache-2.0"
authors = ["Marius Schlegel <marius.schlegel@tu-ilmenau.de>"]
readme = "README.md"
repository = "https://github.com/mariusschlegel/mlflow2prov"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{ include = "mlflow2prov", from = "src" }]

[tool.poetry.scripts]
mlflow2prov = "mlflow2prov.entrypoints.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10, <=3.11"
click = "^8.1.5"
gitpython = "^3.1.32"
jsonschema = "^4.18.3"
mlflow = "==2.4.2"
prov = { extras = ["dot"], version = "^2.0.0" }
"ruamel.yaml" = "^0.17.32"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
genbadge = { version = "^1.1.0", extras = ["coverage"] }
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-rA --cov=src/mlflow2prov --cov-report term-missing --cov-report xml:docs/assets/coverage.xml"
testpaths = ["tests"]
log_level = "WARN"
# log_cli = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abc.abstractmethod",
    "if __name__ == .__main__.:",
]
