[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quickstart-example"
version = "0.1.0"
description = "Quickstart example"
authors = ["Marius Schlegel <marius.schlegel@tu-ilmenau.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.11"
mlflow = "==2.4.2"
mlflow2prov = { git = "https://github.com/mariusschlegel/mlflow2prov" }
