[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "integration-neo4j"
version = "0.1.0"
description = "Neo4J integration"
authors = ["Marius Schlegel <marius.schlegel@tu-ilmenau.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prov2neo = { path = "prov2neo-1.3-fixed.tar.gz", develop = false }
